// Copyright 2025 The axfor Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package raftpb;

option go_package = "metaStore/internal/proto;raftpb";

// RaftMessage is the top-level message for Raft entries
// Supports both single operations and batched operations
message RaftMessage {
  oneof payload {
    RaftOperation single = 1;     // Single operation
    BatchOperation batch = 2;      // Batch of operations
  }
}

// BatchOperation represents multiple operations batched into a single Raft entry
// This provides 2-5x additional throughput improvement over individual operations
message BatchOperation {
  repeated RaftOperation operations = 1;  // All operations in this batch
}

// RaftOperation represents an operation to be committed through Raft
// This replaces the JSON-based RaftOperation struct for better performance
message RaftOperation {
  // Operation type: PUT, DELETE, LEASE_GRANT, LEASE_REVOKE, TXN
  string type = 1;

  // Key-value operation fields
  string key = 2;
  string value = 3;
  int64 lease_id = 4;
  string range_end = 5;
  string seq_num = 6;  // for sync wait

  // Lease operation fields
  int64 ttl = 7;

  // Transaction operation fields
  repeated Compare compares = 8;
  repeated Op then_ops = 9;
  repeated Op else_ops = 10;
}

// Compare represents a transaction comparison
message Compare {
  enum CompareResult {
    EQUAL = 0;
    GREATER = 1;
    LESS = 2;
    NOT_EQUAL = 3;
  }

  enum CompareTarget {
    VERSION = 0;
    CREATE = 1;
    MOD = 2;
    VALUE = 3;
    LEASE = 4;
  }

  string key = 1;
  CompareResult result = 2;
  CompareTarget target = 3;

  // Target value (union type)
  oneof target_union {
    int64 version = 4;
    int64 create_revision = 5;
    int64 mod_revision = 6;
    bytes value = 7;
    int64 lease = 8;
  }
}

// Op represents a transaction operation
message Op {
  enum OpType {
    PUT = 0;
    DELETE = 1;
    RANGE = 2;
  }

  OpType type = 1;
  string key = 2;
  bytes value = 3;
  string range_end = 4;
  int64 lease = 5;
}

// StoreSnapshot represents a complete snapshot of the KV store state
// (renamed to avoid conflict with raft.Snapshot)
message StoreSnapshot {
  int64 revision = 1;                    // Current revision
  map<string, KeyValueProto> kv_data = 2; // All key-value pairs
  map<int64, LeaseProto> leases = 3;      // All leases
}

// KeyValueProto represents a key-value pair in Protobuf
message KeyValueProto {
  bytes key = 1;
  bytes value = 2;
  int64 create_revision = 3;
  int64 mod_revision = 4;
  int64 version = 5;
  int64 lease = 6;
}

// LeaseProto represents a lease in Protobuf
message LeaseProto {
  int64 id = 1;
  int64 ttl = 2;
  int64 grant_time_unix_nano = 3;  // Time as Unix nanoseconds
  repeated string keys = 4;         // Associated keys
}
